<resources>

    <!-- Fixes bug -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <!-- drawer -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- Rules -->
    <string name="alert_title">Alert</string>
    <string name="alert_system_alert">System Alert</string>
    <string name="alert_custom_alert">Custom Alert</string>
    <string name="rule_online">Online</string>
    <string name="rule_offline">Offline</string>
    <string name="rule_away">Away</string>
    <string name="rule_armed">Armed</string>
    <string name="rule_disarmed">Disarmed</string>

    <!-- Devices -->
    <string name="device_uc_352">UC-352BLE</string>
    <string name="device_ua_651">UA-651BLE</string>

    <!-- DateUtil -->
    <string name="date_a_few_seconds_ago">a few seconds ago</string>
    <plurals name="date_minute_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <string name="date_day">%1$s at %2$s</string>
    <string name="date_today">Today</string>

    <!-- Units -->
    <string name="unit_mmol_l">mmol/L</string>
    <string name="unit_kg">KG</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="unit_bpm">bpm</string>
    <string name="unit_per_min">/min.</string>
    <string name="unit_percent">%</string>
    <string name="unit_celcius">\u2103</string>

    <!-- Commission devices -->
    <!-- Trackers -->
    <string name="tracker_personal">SmartEarsLife Personal Tracker</string>
    <string name="tracker_personal_desc">Keep in touch with your loved ones.</string>
    <string name="tracker_paws">SmartEarsLife Paws</string>
    <string name="tracker_paws_desc">Never lose your pet again. Track your pet\'s location on-demand from your smartphone.</string>
    <string name="tracker_kids">SmartEarsLife Kids Tracker</string>
    <string name="tracker_kids_desc">Stay connected with your kids. Kee your eyes on their location and communicate with them.</string>

    <!-- Errors -->
    <string name="error_required_field">Required field</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_check_network_connection">Check your network connection.</string>
    <string name="error_no_members">No members</string>

    <!-- Alerts -->
    <string name="alert_title_error">Error</string>

    <!-- Actions -->
    <string name="action_ok">OK</string>
    <string name="action_login">Login</string>
    <string name="action_send">Send</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_connect">Connect</string>
    <string name="action_stop">Stop</string>
    <string name="action_scan_nurse_id">Scan Nurse ID</string>
    <string name="action_scan_patient_id">Scan Patient ID</string>
    <string name="action_measure">Measure</string>
    <string name="action_confirm">Confirm</string>

    <string name="message_sync">Syncing data</string>
    <string name="message_sync_completed">Sync completed</string>
    <string name="message_sync_error">Sync error</string>

    <!-- Hints -->
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_notes">Notes</string>

    <!-- Navigations -->
    <string name="nav_logout">Logout</string>
    <string name="nav_devices">Devices</string>

    <!-- Login activity -->
    <string name="login_title_forgot_password">Forgot Password</string>
    <string name="login_title_sign_up">Sign Up</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_reset_password_msg">Enter your email address below to reset your password.</string>

    <!-- Dashboard activity -->
    <string name="dashboard_title">Home</string>

    <!-- BloodGlucose activity -->
    <string name="bloodglucose_name_unit_label">Blood Glucose (mmol/L)</string>

    <!-- BloodPressure activity -->
    <string name="bloodpressure_systolic_name_unit_label">Systolic (mmHg)</string>
    <string name="bloodpressure_diastolic_name_unit_label">Diastolic (mmHg)</string>
    <string name="bloodpressure_pulse_rate_name_unit_label">Pulse rate (bpm)</string>

    <!-- BodyWeight activity -->
    <string name="bodyweight_name_unit_label">Body Weight (KG)</string>

    <!-- BodyTemperature activity -->
    <string name="bodytemperature_name_unit_label">Body Temperature (\u2103;)</string>

    <!-- SPO2 activity -->
    <string name="spo2_spo2_name_unit_label">SPo2 (%)</string>
    <string name="spo2_pulse_rate_name_unit_label">Pulse rate (bpm)</string>
    <string name="spo2_pi_name_unit_label">PI (%)</string>

    <!-- Device activity -->
    <string name="device_title">Devices</string>
    <string name="device_alert_remove_title">Remove device</string>
    <string name="device_alert_remove_msg">%1$s will be removed.</string>
    <string name="device_title_add_device">Add device</string>
    <string name="device_msg_scanning">Scanning for device.</string>
    <string name="device_msg_paring">Pairing for device.</string>
    <string name="device_msg_no_device">No devices found.</string>
    <string name="device_msg_start_connect">Start connecting to device.</string>
    <string name="device_msg_error_disconnected">Connection error. Retry.</string>
    <string name="device_msg_waiting_measure">Waiting to start measuring.</string>
    <string name="device_msg_no_data">No data from device. Retry</string>

    <!-- misc -->
    <string name="blood_pressure">Blood Pressure</string>
    <string name="body_weight">Body Weight</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="spo2">SpO2</string>
    <string name="blood_glucose">Blood Glucose</string>


    <!-- QN -->
    <string name="qn_connecting_to">Connecting to %1$s</string>
    <string name="qn_connected_to">Connected to %1$s</string>
    <string name="qn_bmi">BMI</string>
    <string name="qn_body_fat">Body Fat</string>
    <string name="qn_water">Body Water</string>
    <string name="qn_bmr">BMR</string>
    <string name="qn_subcutaneous_fat">Subcutaneous Fat</string>
    <string name="qn_visceral_fat">Visceral Fat</string>
    <string name="qn_bone_mass">Bone Mass</string>
    <string name="qn_skeletal_muscle">Skeletal Muscle</string>
    <string name="qn_protein">Protein</string>

    <!-- Urion -->
    <string name="urion_connected_to">Connected to %1$s</string>
</resources>
