<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_content">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_renewit"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_textinputlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_logo">

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:maxLength="@integer/email_length"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textinputlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/email_textinputlayout"
        app:layout_constraintRight_toRightOf="@+id/email_textinputlayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_textinputlayout">

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/password_length"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/action_login"
        style="@style/AppButton"
        app:layout_constraintLeft_toLeftOf="@+id/email_textinputlayout"
        app:layout_constraintRight_toRightOf="@+id/email_textinputlayout"
        app:layout_constraintTop_toBottomOf="@+id/password_textinputlayout" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:text="@string/login_forgot_password"
        android:textAlignment="textEnd"
        app:layout_constraintRight_toRightOf="@+id/email_textinputlayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:text="@string/login_sign_up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>